--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-client-preset": "^1.0.2",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "react": "^16.0.0",
+    "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.17"
   },
